--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="container-fluid fixed-top" id="navbar">
                 <div class="row">
-                    <div style="cursor:pointer;" onclick="switchMenu();" class="col-xs-4" id="navbar-left">
+                    <div class="noselect" style="cursor:pointer;" onclick="switchMenu();" class="col-xs-4" id="navbar-left">
                         <span id="menuBtn">&#9776;</span>
                     </div>
                     <div class="col-xs-8" id="navbar-right"> 
@@ -28,26 +28,29 @@
             </div>
         </header>
         <div class="container-fluid" id="global-container">
-            <div class="row justify-content-center">
-                <div class="col-2 d-none d-sm-block border row justify-content-center" id="left-menu">
-                    <div class="widget border border-primary">
-                        Widget 1
-                    </div>
-                    <div class="widget border border-primary">
-                        Widget 2
+            <div class="row justify-content-around">
+                <div class="col-2 d-none d-xl-block border border-danger">
+                    <div id="widgets-container">
+                        <div class="widget border border-primary">
+                            Widget 1
+                        </div>
+                        <div class="widget border border-primary">
+                            Widget 2
+                        </div>
                     </div>
                 </div>
-                <div class="col-1"></div>
-                <div class="col-8 border" id="page-container">
-                    <h2>Page Title</h1>
-                    <section id="page-content">
-                        Page content
-                    </section>
+                <div class="col-xl-9 col-12 border border-danger">
+                    <div id="page-container">
+                        <h2>Page Title</h2>
+                        <section id="page-content">
+                            Page content
+                        </section>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid" id="footer-container">
-            <a class="footer-link" style="font-size:1.3em;" href="AboutUS.html">Qui sommes nous ?</a>
+            <p style="font-size:1.3em; margin:0;">Les logos des établissements :</p>
             <div class="footer-img">
                 <a href="https://www.univ-reims.fr"><img alt="Logo URCA" src="img/logo_urca.png"></a>
                 <a href="https://www.iut-rcc.fr"><img alt="Logo IUT" src="img/iut.png"></a>
@@ -65,13 +68,13 @@
             <div class="menu-content">
                 <strong>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='index.html' target="_self" active>Accueil</a>
+                    <a class="noselect" href='index.html' target="_self" active>Accueil</a>
                     <hr class="border-limiter">
                     <a class="menu-link" href='Présentation.html' target="_self">Présentation</a>
                     <hr class="border-limiter">
                     <a class="menu-link" href='Etudes.html' target="_self">Les Etudes</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='Récapitulatif.html' target="_self">Récapitulatif</a>
+                    <a class="menu-link" href='Récapitulatif.html' target="_self">Les Sources</a>
                     <hr class="border-limiter">
                     <a class="menu-link" href='Video.html' target="_self">Vidéo</a>
                     <hr class="border-limiter">
