--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="container-fluid fixed-top" id="navbar">
                 <div class="row">
-                    <div class="noselect" style="cursor:pointer;" onclick="switchMenu();" class="col-xs-4" id="navbar-left">
+                    <div class="noselect" onclick="switchMenu();" class="col-xs-4" id="navbar-left">
                         <span id="menuBtn">&#9776;</span>
                     </div>
                     <div class="col-xs-8" id="navbar-right"> 
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div id="footer-container">
-                <p style="font-size:1.2em; margin:0;">Projet IUT Départ. Informatique</p>
+                <p>Projet IUT Départ. Informatique</p>
                 <div class="footer-img">
                     <a href="https://www.univ-reims.fr"><img alt="Logo URCA" src="img/logo_urca.png"></a>
                     <a href="https://www.iut-rcc.fr"><img alt="Logo IUT" src="img/iut.png"></a>
