retify CSS for responsive

--- a/index.html
+++ b/index.html
@@ -30,20 +30,17 @@
         <div class="container-fluid" id="global-container">
             <div class="container-fluid" id="header-container">
                 <div class="row justify-content-around">
-                    <div class="col-2 d-none d-xl-block">
+                    <div class="col-3 d-none d-xl-block">
                         <div id="widgets-container">
                             <div class="widget">
                                 <h3 class="widget-title">Navigation</h3>
-                                <div class="widget-corps" id="navWidget">
-                                    <ul>
-                                        <li class="linkNavWidget" onclick="location.href='index.html'" active>Accueil</li>
-                                        <li class="linkNavWidget" onclick="location.href='presentation.html'">Présentation</li>
-                                        <li class="linkNavWidget" onclick="location.href='etudes.html'">Les Etudes</li>
-                                        <li class="linkNavWidget" onclick="location.href='recapitulatif.html'">Les Sources</li>
-                                        <li class="linkNavWidget" onclick="location.href='video.html'">La Vidéo</li>
-                                        <li class="linkNavWidget" onclick="location.href='anotherlink.html'">An other link</li>
-                                    </ul>
-                                </div>
+                                <ul id="navWidget">
+                                    <li class="linkNavWidget" onclick="location.href='index.html'" active>Accueil</li>
+									<li class="linkNavWidget" onclick="location.href='la_video.html'">La Vidéo</li>
+									<li class="linkNavWidget" onclick="location.href='les_etudes.html'">Les Études</li>
+                                    <li class="linkNavWidget" onclick="location.href='le_metier.html'">Le Métier</li>
+                                    <li class="linkNavWidget" onclick="location.href='les_sources.html'">Les Sources</li>
+                                </ul>
                             </div>
                             <div class="widget">
                                 <h3 class="widget-title">Nom de menu</h3>
@@ -91,15 +88,13 @@
                     <hr class="border-limiter">
                     <a class="noselect" href='index.html' target="_self" active>L'Accueil</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='presentation.html' target="_self">La Présentation</a>
+					<a class="noselect" href='la_video.html' target="_self">La Vidéo</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='etudes.html' target="_self">Les Etudes</a>
+                    <a class="menu-link" href='les_etudes.html' target="_self">Les Études</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='recapitulatif.html' target="_self">Les Sources</a>
+                    <a class="menu-link" href='le_metier.html' target="_self">Le Métier</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='video.html' target="_self">La Vidéo</a>
-                    <hr class="border-limiter">
-                    <a class="menu-link" href='anotherlink.html' target="_self">An other link</a>
+                    <a class="menu-link" href='les_sources.html' target="_self">Les Sources</a>
                     <hr class="border-limiter">
                 </strong>
             </div>
