--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="https://www.univ-reims.fr"><img alt="Logo URCA" src="img/logo_urca.png"></a>
                     <a href="https://www.iut-rcc.fr"><img alt="Logo IUT" src="img/iut.png"></a>
                 </div>
-                2020-2021 © <a class="footer-link" href="https://www.iut-rcc.fr">IUT de Reims-Châlons-Charleville</a>
+                <p>2020-2021 © <a class="footer-link" href="https://www.iut-rcc.fr">IUT de Reims-Châlons-Charleville</a></p>
             </div>
         </div>
         <!-- Scripts JavaScripts -->
