--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="noselect" onclick="switchMenu();" class="col-xs-4" id="navbar-left">
                         <span id="menuBtn">&#9776;</span>
                     </div>
-                    <div class="col-xs-8" id="navbar-right"> 
+                    <div class="noselect col-xs-8" id="navbar-right"> 
                         Ingénieur Cloud Computing
                     </div>
                 </div>
@@ -33,17 +33,17 @@
                     <div class="col-3 d-none d-xl-block">
                         <div id="widgets-container">
                             <div class="widget">
-                                <h3 class="widget-title">Navigation</h3>
+                                <h3 class="noselect widget-title">Navigation</h3>
                                 <ul id="navWidget">
-                                    <li class="linkNavWidget" onclick="location.href='index.html'" active>Accueil</li>
-									<li class="linkNavWidget" onclick="location.href='la_video.html'">La Vidéo</li>
-									<li class="linkNavWidget" onclick="location.href='les_etudes.html'">Les Études</li>
-                                    <li class="linkNavWidget" onclick="location.href='le_metier.html'">Le Métier</li>
-                                    <li class="linkNavWidget" onclick="location.href='les_sources.html'">Les Sources</li>
+                                    <li class="noselect" onclick="location.href='index.html'" active>Accueil</li>
+									<li class="noselect" onclick="location.href='la_video.html'">La Vidéo</li>
+									<li class="noselect" onclick="location.href='les_etudes.html'">Les Études</li>
+                                    <li class="noselect" onclick="location.href='le_metier.html'">Le Métier</li>
+                                    <li class="noselect" onclick="location.href='les_sources.html'">Les Sources</li>
                                 </ul>
                             </div>
                             <div class="widget">
-                                <h3 class="widget-title">Nom de menu</h3>
+                                <h3 class="noselect widget-title">Nom de menu</h3>
                                 <div class="widget-corps">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                     Fusce gravida turpis sit amet lectus volutpat 
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div id="footer-container">
+            <div class="noselect" id="footer-container">
                 <p>Projet IUT Départ. Informatique</p>
                 <div class="footer-img">
                     <a href="https://www.univ-reims.fr"><img alt="Logo URCA" src="img/logo_urca.png"></a>
@@ -81,7 +81,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="scripts/menu.js"></script>
         <!-- Menu NAV DEBUT -->
-        <div id="menu" class="menuOverlay">
+        <div id="menu" class="noselect menuOverlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeMenu();">&times;</a>
             <div class="menu-content">
                 <strong>
