add all pages & modif title

--- a/le_metier.html
+++ b/le_metier.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Corentin Levalet, Hugo Boulant, Augustin Hazard, Nathan Boutevillain, Lucas Hoarau, Valentin Vallart & Raphaël Saintes">
         <meta name="keywords" content="JeFilmeLeMetierQuiMePlait Concours IUT Informatique Cloud Computing Ingénieur">
         <meta name="description" content="Site présentation du métier d'Ingénieur Cloud.">
-        <title>Ingénieur Cloud | Concours JFLMQMP</title>
+        <title>Ingénieur Cloud | Le Métier</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
@@ -35,9 +35,9 @@
                             <div class="widget">
                                 <h3 class="noselect widget-title">Navigation</h3>
                                 <ul id="navWidget">
-                                    <li class="noselect" onclick="location.href='index.html'" active>Accueil</li>
+                                    <li class="noselect" onclick="location.href='index.html'">Accueil</li>
 									<li class="noselect" onclick="location.href='la_video.html'">La Vidéo</li>
-									<li class="noselect" onclick="location.href='le_metier.html'">Le Métier</li>
+									<li class="noselect" onclick="location.href='le_metier.html'" active>Le Métier</li>
 									<li class="noselect" onclick="location.href='les_etudes.html'">Les Études</li>
                                     <li class="noselect" onclick="location.href='les_sources.html'">Les Sources</li>
                                 </ul>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-xl-9 col-12">
                         <div id="page-container">
-                            <h2 class="noselect">Je Filme Le Métier Qui Me Plait</h2>
+                            <h2 class="noselect">Le Métier</h2>
                             <section id="page-content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida turpis sit amet lectus volutpat vulputate. In vel magna posuere, imperdiet augue et, posuere nibh. Sed odio nunc, luctus id convallis at, consectetur sed enim. Integer commodo lorem ac mauris pharetra congue. In vitae mauris non tellus facilisis rutrum cursus eu arcu. Mauris fermentum leo a diam suscipit, et consectetur augue luctus. Suspendisse nisl eros, tristique at tincidunt vel, egestas sit amet lectus. Ut tellus tortor, tincidunt nec volutpat ac, euismod vitae nisi. Sed suscipit sollicitudin ligula, eu sollicitudin leo ornare nec. Pellentesque sollicitudin, diam in tincidunt placerat, odio quam vestibulum augue, sit amet tempus dui ante a quam. Fusce in diam eget eros vehicula vulputate sodales id nulla. Nunc tristique arcu in nisl rhoncus tristique. Aliquam suscipit, lectus ac laoreet tempus, sapien velit semper dui, in tincidunt ipsum erat eu erat. Cras commodo augue dui, vitae vehicula sem accumsan ac. Nulla sollicitudin nulla sed ipsum maximus pulvinar.
                                 Ut vitae mauris ut erat suscipit ullamcorper vitae eu risus. Nullam quis neque quis felis egestas tempor. Duis eget diam fermentum, iaculis ex non, mollis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce aliquet turpis dui, id volutpat leo ullamcorper ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi.
@@ -86,11 +86,11 @@
             <div class="menu-content">
                 <strong>
                     <hr class="border-limiter">
-                    <a class="noselect" href='index.html' target="_self" active>L'Accueil</a>
+                    <a class="noselect" href='index.html' target="_self">L'Accueil</a>
                     <hr class="border-limiter">
 					<a class="noselect" href='la_video.html' target="_self">La Vidéo</a>
                     <hr class="border-limiter">
-                    <a class="menu-link" href='le_metier.html' target="_self">Le Métier</a>
+                    <a class="menu-link" href='le_metier.html' target="_self" active>Le Métier</a>
                     <hr class="border-limiter">
 					<a class="menu-link" href='les_etudes.html' target="_self">Les Études</a>
                     <hr class="border-limiter">
