mise en page acceuil et video

--- a/index.html
+++ b/index.html
@@ -56,12 +56,29 @@
                         <div id="page-container">
                             <h2 class="noselect">Je Filme Le Métier Qui Me Plait</h2>
                             <section id="page-content">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida turpis sit amet lectus volutpat vulputate. In vel magna posuere, imperdiet augue et, posuere nibh. Sed odio nunc, luctus id convallis at, consectetur sed enim. Integer commodo lorem ac mauris pharetra congue. In vitae mauris non tellus facilisis rutrum cursus eu arcu. Mauris fermentum leo a diam suscipit, et consectetur augue luctus. Suspendisse nisl eros, tristique at tincidunt vel, egestas sit amet lectus. Ut tellus tortor, tincidunt nec volutpat ac, euismod vitae nisi. Sed suscipit sollicitudin ligula, eu sollicitudin leo ornare nec. Pellentesque sollicitudin, diam in tincidunt placerat, odio quam vestibulum augue, sit amet tempus dui ante a quam. Fusce in diam eget eros vehicula vulputate sodales id nulla. Nunc tristique arcu in nisl rhoncus tristique. Aliquam suscipit, lectus ac laoreet tempus, sapien velit semper dui, in tincidunt ipsum erat eu erat. Cras commodo augue dui, vitae vehicula sem accumsan ac. Nulla sollicitudin nulla sed ipsum maximus pulvinar.
-                                Ut vitae mauris ut erat suscipit ullamcorper vitae eu risus. Nullam quis neque quis felis egestas tempor. Duis eget diam fermentum, iaculis ex non, mollis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce aliquet turpis dui, id volutpat leo ullamcorper ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi.
-                                Etiam finibus lorem urna, a elementum nulla feugiat ut. Mauris dolor justo, lobortis nec dui a, blandit accumsan turpis. Sed ac libero nec ante blandit sodales. Fusce bibendum ultrices ex quis tempor. Nullam vel lorem elit. Etiam molestie imperdiet purus eu congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                Mauris vestibulum felis leo, in bibendum ligula sodales quis. Duis lobortis felis in scelerisque dignissim. Pellentesque fermentum libero id sollicitudin vulputate. Vivamus vestibulum felis pretium, blandit neque eget, fermentum odio. Mauris a feugiat enim. Donec scelerisque pretium faucibus. Mauris id eros laoreet, consequat magna id, commodo justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas quis eros lorem. Suspendisse faucibus libero ac leo porttitor, eget consequat dolor dapibus. Vivamus metus dolor, aliquam semper lorem consequat, euismod ultricies tellus. Vestibulum lobortis facilisis lacus, at fringilla nunc pulvinar sit amet. Integer vel iaculis risus, quis luctus libero. Donec lacinia et purus eget mattis. Nam ipsum justo, faucibus in lacus eget, elementum efficitur nibh. Quisque pellentesque dignissim ligula nec rhoncus.
-                                Integer elementum justo ullamcorper arcu lobortis porta. Duis ut arcu eu lectus consectetur lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer ultricies suscipit arcu ut elementum. Nullam consequat massa a sem pulvinar dapibus. Phasellus dui nunc, sollicitudin at efficitur eu, condimentum ac neque. Nam venenatis, ante at rutrum blandit, eros massa consectetur nulla, sed hendrerit ex felis id enim. Aenean vel gravida nulla, et hendrerit est. Proin et iaculis enim. Sed pulvinar varius dui, tincidunt cursus sem laoreet a. Suspendisse facilisis sapien id viverra varius. Sed non lectus ut urna cursus pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi nec lectus convallis, lacinia ex vitae, placerat sapien. Vivamus sed finibus ipsum. Duis suscipit nulla rhoncus urna faucibus tincidunt. 
-                            </section>
+                                <p>
+									<strong>« Je Filme le métier qui me plaît »</strong> est un concours parrainé par le Ministère de L’ Éducation Nationale de 
+									la Jeunesse, et des Sports, du Ministère de l’Enseignement supérieur, de la Recherche et de l’Innovation, 
+									et ainsi du Ministère du Travail. C’est une expérience permettant aux étudiants de <strong>découvrir 
+									le monde professionnel</strong>, d’en apprendre plus sur une profession et d’assimiler des <strong>nouvelles compétences</strong> 
+									liées au monde du numérique. Un projet original alliant créativité, <strong>travail d’équipe</strong>, réflexion, recherche, 
+									technicité et compétitivité.
+								</p>
+								<p>
+									Une <strong>compétition</strong> dans laquelle : élèves, étudiants, stagiaires doivent réaliser un <strong>reportage vidéo</strong> 
+									d’une durée de 3 minutes maximum sur un métier choisi. Avec cela un scénario et un montage vidéo propice 
+									à divertir et informer un public.
+								</p>
+								<p>
+									Dans le cadre de ce projet. Nous autre : Corentin Levalet, Hugo Boulant, Augustin Hazard, Nathan 
+									Boutevillain, Lucas Hoarau, Valentin Vallart, Raphaël Saintes, étudiants du groupe INFS 1_5A  à <strong>l’IUT 
+									de Reims</strong>, (Département Informatique) avons décidé de présenter à ce concours le métier d’<strong>Ingénieur en 
+									Cloud Computing</strong>, un métier récent, et dans l’air du temps du à la place que les données prennent dans 
+									le <strong>monde d’aujourd’hui</strong> demandant de <strong>relever des défis</strong> pour en stocker de plus 
+									en plus mais aussi de mieux en mieux <strong>sécuriser</strong>.
+								</p>	
+
+							</section>
                         </div>
                     </div>
                 </div>
