--- a/la_video.html
+++ b/la_video.html
@@ -56,12 +56,18 @@
                         <div id="page-container">
                             <h2 class="noselect">Notre vidéo</h2>
                             <section id="page-content">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida turpis sit amet lectus volutpat vulputate. In vel magna posuere, imperdiet augue et, posuere nibh. Sed odio nunc, luctus id convallis at, consectetur sed enim. Integer commodo lorem ac mauris pharetra congue. In vitae mauris non tellus facilisis rutrum cursus eu arcu. Mauris fermentum leo a diam suscipit, et consectetur augue luctus. Suspendisse nisl eros, tristique at tincidunt vel, egestas sit amet lectus. Ut tellus tortor, tincidunt nec volutpat ac, euismod vitae nisi. Sed suscipit sollicitudin ligula, eu sollicitudin leo ornare nec. Pellentesque sollicitudin, diam in tincidunt placerat, odio quam vestibulum augue, sit amet tempus dui ante a quam. Fusce in diam eget eros vehicula vulputate sodales id nulla. Nunc tristique arcu in nisl rhoncus tristique. Aliquam suscipit, lectus ac laoreet tempus, sapien velit semper dui, in tincidunt ipsum erat eu erat. Cras commodo augue dui, vitae vehicula sem accumsan ac. Nulla sollicitudin nulla sed ipsum maximus pulvinar.
-                                Ut vitae mauris ut erat suscipit ullamcorper vitae eu risus. Nullam quis neque quis felis egestas tempor. Duis eget diam fermentum, iaculis ex non, mollis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce aliquet turpis dui, id volutpat leo ullamcorper ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi.
-                                Etiam finibus lorem urna, a elementum nulla feugiat ut. Mauris dolor justo, lobortis nec dui a, blandit accumsan turpis. Sed ac libero nec ante blandit sodales. Fusce bibendum ultrices ex quis tempor. Nullam vel lorem elit. Etiam molestie imperdiet purus eu congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                Mauris vestibulum felis leo, in bibendum ligula sodales quis. Duis lobortis felis in scelerisque dignissim. Pellentesque fermentum libero id sollicitudin vulputate. Vivamus vestibulum felis pretium, blandit neque eget, fermentum odio. Mauris a feugiat enim. Donec scelerisque pretium faucibus. Mauris id eros laoreet, consequat magna id, commodo justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas quis eros lorem. Suspendisse faucibus libero ac leo porttitor, eget consequat dolor dapibus. Vivamus metus dolor, aliquam semper lorem consequat, euismod ultricies tellus. Vestibulum lobortis facilisis lacus, at fringilla nunc pulvinar sit amet. Integer vel iaculis risus, quis luctus libero. Donec lacinia et purus eget mattis. Nam ipsum justo, faucibus in lacus eget, elementum efficitur nibh. Quisque pellentesque dignissim ligula nec rhoncus.
-                                Integer elementum justo ullamcorper arcu lobortis porta. Duis ut arcu eu lectus consectetur lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer ultricies suscipit arcu ut elementum. Nullam consequat massa a sem pulvinar dapibus. Phasellus dui nunc, sollicitudin at efficitur eu, condimentum ac neque. Nam venenatis, ante at rutrum blandit, eros massa consectetur nulla, sed hendrerit ex felis id enim. Aenean vel gravida nulla, et hendrerit est. Proin et iaculis enim. Sed pulvinar varius dui, tincidunt cursus sem laoreet a. Suspendisse facilisis sapien id viverra varius. Sed non lectus ut urna cursus pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi nec lectus convallis, lacinia ex vitae, placerat sapien. Vivamus sed finibus ipsum. Duis suscipit nulla rhoncus urna faucibus tincidunt. 
-                            </section>
+								<p>
+									Cette vidéo a été produite dans le cadre du concours 
+									<strong>« Je Filme le métier qui me plaît »</strong>, la vidéo porte sur le métier d’<strong>ingénieur cloud computing</strong>, 
+									elle a été produite par notre groupe d’étudiant de l'<strong>IUT de Reims</strong> (Département Informatique) qui est composé de Corentin LEVALET, 
+									Lucas HOARAU, Hugo BOULANT, Nathan BOUTEVILLAIN, Augustin HAZARD, Raphael SAINTES et Valentin VALLART. 
+									<br>
+								</p>
+								<video controls preload="metadata" poster="img/iut.png">
+								  <source src="img/video.ogv" type="video/ogg">
+								  <source src="img/video.mp4" type="video/mp4">
+								</video>
+							</section>
                         </div>
                     </div>
                 </div>
