add équipe widget

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                                 </ul>
                             </div>
                             <div class="widget">
-                                <h3 class="noselect widget-title">Nom de menu</h3>
+                                <h3 class="noselect widget-title">Notre Équipe</h3>
                                 <div class="widget-corps">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                    Fusce gravida turpis sit amet lectus volutpat 
-                                    vulputate. consectetur adipiscing elit.
+                                    Corentin Levalet, Hugo Boulant, Augustin Hazard, 
+									Nathan Boutevillain, Lucas Hoarau, Valentin Vallart, 
+									Raphaël Saintes, étudiants du groupe INFS 1_5A à <strong>l’IUT de Reims</strong>.
                                 </div>
                             </div>
                         </div>
