--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                     </div>
                 </div>
             </div>
-            <div class="noselect" id="footer-container">
+            <footer class="noselect" id="footer-container">
                 <p>Projet IUT Départ. Informatique</p>
                 <div class="footer-img">
                     <a href="https://www.univ-reims.fr"><img alt="Logo URCA" src="img/logo_urca.png"></a>
                     <a href="https://www.iut-rcc.fr"><img alt="Logo IUT" src="img/iut.png"></a>
                 </div>
                 <p>2020-2021 © <a class="footer-link" href="https://www.iut-rcc.fr">IUT de Reims-Châlons-Charleville</a></p>
-            </div>
+            </footer>
         </div>
         <!-- Scripts JavaScripts -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
