--- a/la_video.html
+++ b/la_video.html
@@ -63,7 +63,7 @@
 									Lucas HOARAU, Hugo BOULANT, Nathan BOUTEVILLAIN, Augustin HAZARD, Raphael SAINTES et Valentin VALLART. 
 									<br>
 								</p>
-								<video controls preload="metadata" poster="img/iut.png">
+								<video controls preload="metadata" poster="img/miniature.jpg">
 								  <source src="img/video.ogv" type="video/ogg">
 								  <source src="img/video.mp4" type="video/mp4">
 								</video>
